# app

./: .gitignore  Cargo.toml  README.md  eslintrc.cjs
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs
apps/desktop/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/src-tauri/: Cargo.toml  Tauri.toml
apps/src-tauri/src/: commands.rs  lib.rs
apps/src-ui/: Cargo.toml  Trunk.toml  index.html  package.json
apps/src-ui/src/: app.rs  lib.rs  main.rs
apps/src-ui/src/components/: action.rs  counter.rs  counter_fn.rs  mod.rs  suspense.rs  tauri.rs  theme.rs
apps/src-ui/tests/: counter.rs  counter_fn.rs
apps/src-ui/tests/common/: mod.rs
crates/api/: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src-tauri/: Cargo.toml
crates/hello/: Cargo.toml
crates/hello/src/: lib.rs
crates/hello/tests/: integration_test.rs
