[package]
name = "src-ui"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3"
leptos = { version = "0.7.0-beta2", features = ["csr"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thaw = { version = "0.4.0-beta", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
