[package]
name = "src-ui"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
icondata = "0.4.0"
js-sys = "0.3.70"
leptos = { version = "0.7.0-beta2", features = ["csr"] }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thaw = { version = "0.4.0-beta", features = ["csr"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1.10", features = ["v4"] }
# tokio = { version = "1.39", features = ["time", "rt"], optional = true }

# [dev-dependencies]
# wasm-bindgen-test = "0.3.43"
# web-sys = "0.3.70"
