[package]
name = "src-ui"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "src_ui_lib"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.30"
icondata = "0.4.0"
js-sys = "0.3.70"
leptos = { version = "0.7.0-beta2", features = ["csr"] }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thaw = { version = "0.4.0-beta", features = ["csr"] }
# wasm-bindgen = "0.2.93"
# wasm-bindgen-futures = "0.4.43"

[dependencies.tauri-sys]
git = "https://github.com/JonasKruckenberg/tauri-sys"
branch = "v2"
features = ["all"]

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.43"
pretty_assertions = "1.4"
rstest = "0.22.0"

[dev-dependencies.web-sys]
features = ["HtmlElement", "XPathResult"]
version = "0.3.70"
